--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -9,9 +9,22 @@
   "boot": "auto",
   "map": ["share"],
   "ports": {
-    "4040/tcp": 4040
+    "4040/tcp": null
    },
+  "ingress": true,
+  "ingress_port": 4040,
   "options": {
+    "NGROK_AUTH": "",
+    "NGROK_SUBDOMAIN": "",
+    "NGROK_HOSTNAME": "",
+    "NGROK_REMOTE_ADDR": "",
+    "NGROK_USERNAME": "",
+    "NGROK_PASSWORD": "",
+    "NGROK_PROTOCOL": "",
+    "NGROK_PORT": "",
+    "NGROK_REGION": "",
+    "NGROK_LOOK_DOMAIN": "",
+    "NGROK_BINDTLS": ""
   },
   "schema": {},
   "image": "thepicklenat0r/hassio-ngrok-client"
