--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -9,7 +9,7 @@
   "boot": "auto",
   "map": ["share"],
   "ports": {
-    "4040/tcp": 4041
+    "4040/tcp": null
    },
   "ingress": true,
   "ingress_port": 4041,
