--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -9,7 +9,6 @@
   "boot": "auto",
   "map": ["share"],
   "ports": {
-    "4040/tcp": null
    },
   "ingress": true,
   "ingress_port": 4040,
@@ -21,7 +20,7 @@
     "NGROK_USERNAME": "",
     "NGROK_PASSWORD": "",
     "NGROK_PROTOCOL": "",
-    "NGROK_PORT": "",
+    "NGROK_PORT": 8123,
     "NGROK_REGION": "",
     "NGROK_LOOK_DOMAIN": "",
     "NGROK_BINDTLS": ""
