--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -5,6 +5,13 @@
   "description": "A ngrok Client for Hass.io",
   "webui": "http://[HOST]:[PORT:4040]",
   "url": "https://github.com/ThePicklenat0r/hassio-ngrok",
+  "host_network": "true",
+  "ingress": true,
+  "ingress_port": 4040,
+  "ingress_entry": "/inspect/http",
+  "panel_icon": "mdi:wan",
+  "panel_title": "ngrok Client",
+  "panel_admin": true,
   "arch": [
     "amd64"
   ],
@@ -14,15 +21,11 @@
   "ports": {
     "4040/tcp": null
   },
-  "ingress": true,
-  "ingress_port": 4040,
-  "ingress_entry": "/inspect/http",
-  "panel_icon": "mdi:wan",
-  "panel_title": "ngrok Client",
-  "panel_admin": true,
+  "ports_description": {
+    "4040/tcp": "Web interface (Not required for Hass.io Ingress)"
+  },
   "options": {
     "NGROK_AUTH": "",
-    "NGROK_ADDR": "[HOST]",
     "NGROK_SUBDOMAIN": "",
     "NGROK_HOSTNAME": "",
     "NGROK_REGION": "",
@@ -33,7 +36,6 @@
   },
   "schema": {
     "NGROK_AUTH": "str",
-    "NGROK_ADDR": "match(^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$)",
     "NGROK_SUBDOMAIN": "str",
     "NGROK_HOSTNAME": "str",
     "NGROK_REGION": "list(''|us|eu|ap|au|sa|jp|in)",
