--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -13,7 +13,11 @@
   "panel_title": "ngrok Client",
   "panel_admin": true,
   "arch": [
-    "amd64"
+    "aarch64",
+    "amd64",
+    "armhf",
+    "armv7",
+    "i386"
   ],
   "startup": "system",
   "boot": "auto",
