--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -28,10 +28,9 @@
     "4040/tcp": "Web interface (Not required for Hass.io Ingress)"
   },
   "options": {
-    "NGROK_AUTH": null,
-    "NGROK_SUBDOMAIN": null,
-    "NGROK_HOSTNAME": null,
-    "NGROK_REGION": null,
+    "NGROK_AUTH": "",
+    "NGROK_SUBDOMAIN": "",
+    "NGROK_HOSTNAME": "",
     "NGROK_INSPECT": false,
     "PORT_80": true,
     "PORT_443": true,
