--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -28,6 +28,7 @@
     "NGROK_AUTH": "",
     "NGROK_SUBDOMAIN": "",
     "NGROK_HOSTNAME": "",
+    "NGROK_REGION": "us",
     "NGROK_INSPECT": false,
     "PORT_80": true,
     "PORT_443": true,
@@ -37,7 +38,7 @@
     "NGROK_AUTH": "str?",
     "NGROK_SUBDOMAIN": "str?",
     "NGROK_HOSTNAME": "str?",
-    "NGROK_REGION": "list(us|eu|ap|au|sa|jp|in)?",
+    "NGROK_REGION": "list(us|eu|ap|au|sa|jp|in)",
     "NGROK_INSPECT": "bool",
     "PORT_80": "bool",
     "PORT_443": "bool",
