--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -1,6 +1,6 @@
 {
   "name": "ngrok Client",
-  "version": "1.3",
+  "version": "1.4",
   "slug": "ngrok",
   "description": "A ngrok client for Hass.io",
   "webui": "http://[HOST]:[PORT:4040]",
@@ -24,8 +24,7 @@
     "NGROK_HOSTNAME": "",
     "NGROK_REGION": "us",
     "NGROK_INSPECT": false,
-    "PORT_80": true,
-    "PORT_443": true
+    "USE_TLS": false
   },
   "schema": {
     "NGROK_AUTH": "str?",
@@ -33,8 +32,7 @@
     "NGROK_HOSTNAME": "str?",
     "NGROK_REGION": "list(us|eu|ap|au|sa|jp|in)",
     "NGROK_INSPECT": "bool",
-    "PORT_80": "bool",
-    "PORT_443": "bool"
+    "USE_TLS": "bool"
   },
   "image": "thepicklenat0r/hassio-ngrok"
 }
