--- a/.azure/azp-template-addon.yml
+++ b/.azure/azp-template-addon.yml
@@ -21,6 +21,6 @@ jobs:
         -v ~/.docker:/root/.docker \
         -v /run/docker.sock:/run/docker.sock:rw -v $(pwd):/data:ro \
         homeassistant/amd64-builder:$(versionBuilder) \
-        --addon ${{ parameters.arch }} -t /data/${{ parameters.addon }} \
+        --addon ${{ parameters.arch }} -t /data \
         --docker-hub homeassistant --docker-hub-check
     displayName: 'Build ${{ parameters.addon }}'
