update docker repo to publish

--- a/.azure/azp-template-addon.yml
+++ b/.azure/azp-template-addon.yml
@@ -22,5 +22,5 @@ jobs:
         -v /run/docker.sock:/run/docker.sock:rw -v $(pwd):/data:ro \
         homeassistant/amd64-builder:$(versionBuilder) \
         --addon ${{ parameters.arch }} -t /data \
-        --docker-hub homeassistant --docker-hub-check
+        --docker-hub $(dockerRepo) --docker-hub-check
     displayName: 'Build ${{ parameters.addon }}'
