--- a/config.json
+++ b/config.json
@@ -37,5 +37,5 @@
     "NGROK_INSPECT": "bool",
     "USE_TLS": "bool"
   },
-  "image": "thepicklenat0r/hassio-ngrok"
+  "image": "thepicklenat0r/{arch}-hassio-ngrok"
 }
