--- a/ngrok-client/config.json
+++ b/ngrok-client/config.json
@@ -7,7 +7,11 @@
   "url": "https://github.com/ThePicklenat0r/hassio-ngrok",
   "host_network": "true",
   "arch": [
-    "amd64"
+    "aarch64",
+    "amd64",
+    "armhf",
+    "armv7",
+    "i386"
   ],
   "startup": "system",
   "boot": "auto",
@@ -33,5 +37,5 @@
     "NGROK_INSPECT": "bool",
     "USE_TLS": "bool"
   },
-  "image": "thepicklenat0r/hassio-ngrok"
+  "image": "thepicklenat0r/{arch}-hassio-ngrok"
 }
