--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -1,6 +1,6 @@
 {
   "name": "ngrok Client",
-  "version": "v2.0.3",
+  "version": "v2.0.4",
   "slug": "ngrok",
   "description": "A ngrok client for Hass.io",
   "webui": "http://[HOST]:[PORT:4040]",
@@ -53,5 +53,5 @@
       }
     ]
   },
-  "image": "{arch}-hassio-ngrok"
+  "image": "thepicklenat0r/{arch}-hassio-ngrok"
 }
