--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -1,6 +1,6 @@
 {
   "name": "ngrok Client",
-  "version": "v2.1.4",
+  "version": "v2.1.5",
   "slug": "ngrok",
   "description": "A ngrok client for Hass.io",
   "webui": "http://[HOST]:[PORT:4040]",
@@ -41,7 +41,7 @@
       {
         "name": "str",
         "proto": "list(http|tls|tcp)",
-        "addr": "str",
+        "addr": "match(^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]):([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5]))|([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5])$)",
         "inspect": "bool?",
         "auth": "str?",
         "host_header": "str?",
@@ -51,7 +51,7 @@
         "crt": "str?",
         "key": "str?",
         "client_cas": "str?",
-        "remote_addr": "str?",
+        "remote_addr": "match(^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]):([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5])$)?",
         "metadata": "str?"
       }
     ]
