--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -1,10 +1,10 @@
 {
   "name": "ngrok Client",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "slug": "ngrok",
   "description": "A ngrok client for Hass.io",
   "webui": "http://[HOST]:[PORT:4040]",
-  "url": "https://github.com/ThePicklenat0r/hassio-ngrok",
+  "url": "https://github.com/dy1io/hassio-addons",
   "arch": [
     "aarch64",
     "amd64",
@@ -55,6 +55,5 @@
         "metadata": "str?"
       }
     ]
-  },
-  "image": "thepicklenat0r/{arch}-hassio-ngrok"
+  }
 }
