--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -5,6 +5,7 @@
   "description": "A ngrok client for Hass.io",
   "webui": "http://[HOST]:[PORT:4040]",
   "url": "https://github.com/dy1io/hassio-addons",
+  "stage": "deprecated"
   "arch": [
     "aarch64",
     "amd64",
