--- a/b2/config.json
+++ b/b2/config.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "slug": "b2",
   "description": "Backup your Home Assistant to BackBlaze B2",
+  "init": false,
   "url": "https://github.com/dy1io/hassio-addons",
   "stage": "experimental",
   "arch": [
