switch to python

--- a/b2/Dockerfile
+++ b/b2/Dockerfile
@@ -7,5 +7,5 @@ COPY rootfs /
 # Setup requirements
 ARG BUILD_ARCH
 RUN set -x \
- && curl -Lo /usr/bin/b2 https://github.com/Backblaze/B2_Command_Line_Tool/releases/latest/download/b2-linux \
- && chmod +x /usr/bin/b2
+  && apk add --no-cache python3 py3-pip \
+  && pip install b2
