--- a/tunnels/Dockerfile
+++ b/tunnels/Dockerfile
@@ -1,10 +1,8 @@
-#ARG BUILD_FROM
-#FROM $BUILD_FROM
-FROM homeassistant/aarch64-base:3.16
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
 # Copy root filesystem
 COPY rootfs /
 
 # Setup requirements
-ARG BUILD_ARCH
 RUN set -x && apk add --no-cache openssh
