--- a/tunnels/Dockerfile
+++ b/tunnels/Dockerfile
@@ -2,7 +2,9 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Copy root filesystem
-COPY rootfs /
+COPY entrypoint.sh /entrypoint.sh
 
 # Setup requirements
 RUN set -x && apk add --no-cache openssh
+
+ENTRYPOINT [ "/entrypoint.sh" ]
