revert back to service

--- a/tunnels/Dockerfile
+++ b/tunnels/Dockerfile
@@ -2,9 +2,7 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Copy root filesystem
-COPY entrypoint.sh /entrypoint.sh
+COPY rootfs /
 
 # Setup requirements
-RUN set -x && apk add --no-cache openssh tree
-
-CMD [ "/entrypoint.sh" ]
+RUN set -x && apk add --no-cache openssh
