--- a/tunnels/config.yaml
+++ b/tunnels/config.yaml
@@ -28,5 +28,5 @@ schema:
   force_new_sshkey: bool?
   tunnels:
     - tunnel: str
-  sni-proxy: bool?
-  tcp-alias: bool?
+  sni_proxy: bool?
+  tcp_alias: bool?
